renamed directive and module name

--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     {
       "name": "Gonzalo Vazquez",
       "email": "gonzalo.segura1@gmail.com"
+    },
+    {
+      "name": "Ricardo Vazquez",
+      "email": "iamricardovazquez@gmail.com"
     }
   ],
   "repository": {
